<?xml version="1.0"?>
<package format="3">
  <name>cage_ros_bridge</name>
  <version>0.0.0</version>
  <description>The cage_ros_bridge package</description>
  <maintainer email="yoshida@furo.org">Tomoaki Yoshida</maintainer>
  <author email="hara@furo.org">Yoshitaka Hara</author>
  <author email="yoshida@furo.org">Tomoaki Yoshida</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
